# hhz

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  build.rs  pgns.txt  uci_log.txt
assets/: test-fens.txt
auswertungen/: .~lock.01-Stand-pat-vs-basic-mobility.ods#  .~lock.smaller_types.ods#  01-Stand-pat-vs-basic-mobility.ods  02_new_metrics_basic_mobilty.ods  Untitled 1.ods  debug_tt_ordering.ods  debug_tt_ordering.xlsx  smaller_types.ods
benchmarks/: .~lock.debug_tt_ordering.xlsx#  10_New metrics.csv  11_New metrics v2.csv  12_Switch to release mode.csv  13_smaller_search_and_eval_types.csv  14_multiple_test_fens.csv  15_init_best_score_to_alpha_or_beta.csv  16_TT-Table, normal search.csv  17_TT-Table-added-q-search.csv  18_Test.csv  19_Test2.csv  20_Iterative-deepening.csv  21_With-tt-stats.csv  22_With-tt-stats-tt-revertet-time-100.csv  23_without-modifier.csv  24_with-modifier.csv  25_with-modifier-with-positive-multiplier.csv  26_no-tt-used.csv  27_gemini version.csv  28_gemini-version-updated-ascending.csv  29_gemini-version-updated-descending.csv  30_gemini-version-updated-descending-with-maximizing.csv  31_kill-me.csv  32_kill-me-pls.csv  33_Without-bucket.csv  34_With-bucket.csv  35_Without-pv-node-check.csv  37_With-high-victim-value.csv  38_Cut-node-score.csv  39_Cut-node-score.csv  3_Simple move Ordering.csv  40_PV-before-cut.csv  41_all-nodes-first.csv  42_reordered-node-importance.csv  44_test.csv  46_PV-then-cut-att-victim-equal.csv  47_PV-then-cut-then-att-then-victim.csv  48_PV-then-cut-then-all-node-then-att-then-victim.csv  49_PV-then-cut-then-att-then-victim-then-all-node.csv  4_improved-measurent-logic.csv  (+18 more)
bruno/: Make Move.bru  bruno.json  new game.bru
bruno/environments/: Mein Server.bru  kais server.bru  localhost.bru
games/: hhz-conditional_tt-10-vs-hhz-un_conditional_tt-10.5-R20.pgn  hhz-time_control-11-vs-hhz-time_control-11-R20.pgn  hhz-v7-vs-hhz-repetitioncheck-9  hhz-v7-vs-hhz-repetitioncheck-9-R2.pgn  hhz-v7-vs-hhz-repetitioncheck-9.pgn  hhz-v7-vs-uci-debug-R2.pgn  hhz-v8-vs-hhz-repetitioncheck-9-R2.pgn
scripts/: build_and_move.sh  tournament.sh
src/: bit_boards.rs  board.rs  bot.rs  const_move_gen.rs  eval.rs  lib.rs  main.rs  metrics.rs  move_gen.rs  moves.rs  polyglot_zobrists.rs  search.rs  tt_table.rs  zobrists.rs
ts-test/: test.ts
