[package]
name = "hhz"
version = "0.1.0"
edition = "2024"

[features]
metrics = []

[dependencies]
chessie = "2.0.0"
csv = "1.3.1"
dotenv = "0.15.0"
futures-util = "0.3.31"
licheszter = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
bytemuck = "1.23.1"
rouille = "3.6.2"
chrono = "0.4.41"
serde_json = "1.0.140"

[profile.release]
opt-level = 3        # Use the highest standard optimization level (this is the default for release).
lto = "fat"          # Enable "fat" Link-Time Optimization for whole-program optimization.
codegen-units = 1    # Force all code into a single unit for maximum optimization potential.
panic = "abort"      # Abort on panic instead of unwinding, which is faster and produces smaller binaries.
strip = true         # Automatically strip symbols from the binary, reducing its size.
