[package]
name = "hhz"
version = "0.1.0"
edition = "2024"

[features]
metrics = ["dep:csv"]
server = ["dep:rouille", "dep:serde"]

[dependencies]
chessie = "2.0.0"
csv = { version = "1.3.1", optional = true }
dotenv = { version = "0.15.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
licheszter = { version = "0.3.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
regex = { version = "1.11.1" }
bytemuck = { version = "1.23.1", optional = true }
rouille = { version = "3.6.2", optional = true }
arrayvec = "0.7.6"
log = "0.4.27"

[profile.release]
opt-level = 3        # Use the highest standard optimization level (this is the default for release).
lto = "fat"          # Enable "fat" Link-Time Optimization for whole-program optimization.
codegen-units = 1    # Force all code into a single unit for maximum optimization potential.
panic = "abort"      # Abort on panic instead of unwinding, which is faster and produces smaller binaries.
strip = true         # Automatically strip symbols from the binary, reducing its size.
